--- a/RabbitTail/RabbitTail.csproj
+++ b/RabbitTail/RabbitTail.csproj
@@ -66,6 +66,13 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RoundButton.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="RoundButton.Designer.cs">
+      <DependentUpon>RoundButton.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Settings.cs" />
     <Compile Include="TweetInfo.cs" />
     <EmbeddedResource Include="home.resx">
       <DependentUpon>home.cs</DependentUpon>
